Added audio and image files
included img attributes for the images

--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MuzakMaker</title>
 </head>
 <body>
     <header>
         <h1>MuzakMaker</h1>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#">MuzakMaker</a></li>
-            <li><a href="#">Trending Songs</a></li>
-            <li><a href="#">Your playlists</a></li>
-            <li><a href="#">Curated Playlists</a></li>
-            <li><a href="#">duke-silver.png</a></li>
-        </ul>
-    </nav>
     <main>
+        <nav>
+            <ul>
+                <li><a href="#">MuzakMaker</a></li>
+                <li><a href="#">Trending Songs</a></li>
+                <li><a href="#">Your playlists</a></li>
+                <li><a href="#">Curated Playlists</a></li>
+                <li><a href="#">duke-silver.png</a></li>
+            </ul>
+        </nav>
         <section>
             <h2>Smooth Jazz</h2>
             <p>This station is dedicated to the soothing sounds of smooth jazz. This genre of commercially oriented crossover jazz became dominant in the 1980s and early 1990s.</p>
@@ -29,34 +29,33 @@
             <section>
                 <h4>Aloma</h4>
                 Artist Cali
-                aloma-cover.png
+                <img src="aloma-cover.png" alt="Image of a white bird flying in a black background.">
                 aloma.mp3
             </section>
             <section>
                 <h4>My Road</h4>
                 Artist Nesterouk
-                my-road-cover.png
+                <img src="my-road-cover.png" alt="Image of a two lane highway in a desert heading towards a snowcapped mountain on a bright sunny day">
                 my-road.mp3
             </section>
             <section>
                 <h4>Papaya</h4>
             Artist Dredstudio
-            papaya-cover.png
+            <img src="papaya-cover.png" alt="Image of an open papaya on a green background">
             papaya.mp3
             </section>
             <section>
                 <h4>Smoothies</h4>
             Artist Black Rhomb
-            smoothies-cover.png
+            <img src="smoothies-cover.png" alt="Pink Smoothie surrounded with bananas, straberries, oranges, a pineaple on a white table with a pastel pink wall">
             smoothies.mp3
             </section>
-
         </section>
         <section>
             <section>
                 <h3></h3>Successful Performance
             Artist Ricky Bombino
-            successful-performance-cover.png
+            <img src="successful-performance-cover.png" alt="Chris Evans in a red sweater ready to fight with happiness in front of a light blue brick wall">
             successful-performance.mp3
             </section>        
             <p>More trending</p>
@@ -65,27 +64,27 @@
         <h3>Your Playlists</h3>
         <section>
             <section>
-                best-of-2020-cover.png
+                <img src="best-of-2020-cover.png" alt="Fire lighting up 2020 in a dark space">
                 Best of 2020
                 The music that got you through the lock down.
             </section>
             <section>
-                pumpkin-spice-cover.png
+                <img src="pumpkin-spice-cover.png" alt="coffe with a fern design made of cream on a wooded background">
                 Pumpkin Spice
                 Creamy and spicy, just like your favorite autumnal latte.
             </section>
             <section>
-                quiet-storm-cover.png
+                <img src="quiet-storm-cover.png" alt="Blue and puirple stormy clouds with lighting">
                 Quiet Storm
                 Slow tempos and relaxed rhythms. 
             </section>
             <section>
-                smooth-jazz-cover.png
+                <img src="smooth-jazz-cover.png" alt="Saxaphoneplayers witha spot light on the right">
                 Smooth Jazz
                 The pioneers of smooth jazz
             </section>
             <section>
-                smooth-study-cover.png
+                <img src="smooth-study-cover.png" alt="Person in a yellow sweater at a desk working on their laptop">
                 Smooth Study
                 Background music to keep you going while you study. 
             </section>
@@ -97,27 +96,27 @@
         <h3>Curated Playlists</h3>
         <section>
             <section>
-                boozy-brunch-cover.png
+                <img src="boozy-brunch-cover.png" alt="Multipe people clinking glasses in the morning">
                 Boozy Brunch
                 Light up the afternoon with these energetic hits. 
             </section>
             <section>
-                dinner-party-cover.png
+                <img src="dinner-party-cover.png" alt="Dinner table with food, cups, lit candles">
                 Dinner Party
                 Background music to give your party life, but allow your guests to chat. 
             </section>
             <section>
-                mellow-cover.png
+                <img src="mellow-cover.png" alt="Two people sitting on a park bench in the middle of the Fall season">
                 Mellow
                 Relax after a stressful day with this collection of extra smooth jazz.
             </section>
             <section>
-                jazz-chill-cover.png
+                <img src="jazz-chill-cover.png" alt="Close up shot of red rose petals">
                 Jazz and Chill
                 Set the mood with these silky sounds.
             </section>
             <section>
-                smooth-saxophone-cover.png
+                <img src="smooth-saxophone-cover.png" alt="Portriat of a man with glasses and grey in front of a light grey background">
                 Jazz Saxophone
                 The greatest collection of your sax favorites. 
             </section>
