--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 The music that got you through the lock down.
             </section>
             <section>
-                <img src="pumpkin-spice-cover.png" alt="coffe with a fern design made of cream on a wooded background">
+                <img src="pumpkin-spice-cover.png" alt="coffee with a fern design made of cream on a wooded background">
                 Pumpkin Spice
                 Creamy and spicy, just like your favorite autumnal latte.
             </section>
