Added audio controls
replaces the mp3 files with audio attributes

--- a/index.html
+++ b/index.html
@@ -29,34 +29,34 @@
             <section>
                 <h4>Aloma</h4>
                 Artist Cali
-                <img src="aloma-cover.png" alt="Image of a white bird flying in a black background.">
-                aloma.mp3
+                <img src="aloma-cover.png" alt="Image of a white bird flying in a black background">
+                <audio controls src="aloma.mp3"></audio>
             </section>
             <section>
                 <h4>My Road</h4>
                 Artist Nesterouk
                 <img src="my-road-cover.png" alt="Image of a two lane highway in a desert heading towards a snowcapped mountain on a bright sunny day">
-                my-road.mp3
+               <audio controls src="my-road.mp3"></audio>
             </section>
             <section>
                 <h4>Papaya</h4>
             Artist Dredstudio
             <img src="papaya-cover.png" alt="Image of an open papaya on a green background">
-            papaya.mp3
+            <audio controls src="papaya.mp3"></audio>
             </section>
             <section>
                 <h4>Smoothies</h4>
             Artist Black Rhomb
             <img src="smoothies-cover.png" alt="Pink Smoothie surrounded with bananas, straberries, oranges, a pineaple on a white table with a pastel pink wall">
-            smoothies.mp3
+            <audio controls src="smoothies.mp3"></audio>
             </section>
         </section>
         <section>
             <section>
                 <h3></h3>Successful Performance
             Artist Ricky Bombino
-            <img src="successful-performance-cover.png" alt="Chris Evans in a red sweater ready to fight with happiness in front of a light blue brick wall">
-            successful-performance.mp3
+            <img src="successful-performance-cover.png" alt="Man that looks like Chris Evans in a red sweater ready to fight with happiness in front of a light blue brick wall">
+            <audio controls src="successful-performance.mp3"></audio>
             </section>        
             <p>More trending</p>
        </section>
@@ -125,6 +125,8 @@
     
        </section>
     </main>
-    <footer>Copyright 2022 Smooth Jazz</footer>
+    <footer>
+        <small>Copyright 2022 Smooth Jazz</small>
+    </footer>
 </body>
 </html>
