correcting images and audio

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <section>
                 <h4>Aloma</h4>
                 Artist Cali
-                <img src="aloma-cover.png" alt="Image of a white bird flying in a black background">
+                <img src="images/aloma-cover.png" alt="Image of a white bird flying in a black background">
                 <audio controls src="aloma.mp3"></audio>
             </section>
             <section>
