coreected image to images
on duke silver

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
                 <li><a href="#">Trending Songs</a></li>
                 <li><a href="#">Your playlists</a></li>
                 <li><a href="#">Curated Playlists</a></li>
-                <li><a href="#"><img src="image/duke-silver.png" alt="image of Duke Silver"></a></li>
+                <li><a href="#"><img src="images/duke-silver.png" alt="image of Duke Silver"></a></li>
             </ul>
         </nav>
         <section id="smoothJazz">
             <h2>Smooth Jazz</h2>
             <p>This station is dedicated to the soothing sounds of smooth jazz. This genre of commercially oriented crossover jazz became dominant in the 1980s and early 1990s.</p>
         </section>
-        
+
         <section id="trending">
             <h3>Trending Songs</h3>
             <section>
