--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <nav>
             <ul>
-                <li><a href="#">MuzakMaker</a></li>
+                <li><a href="index.html">MuzakMaker</a></li>
                 <li><a href="#">Trending Songs</a></li>
                 <li><a href="#">Your playlists</a></li>
                 <li><a href="#">Curated Playlists</a></li>
@@ -25,34 +25,34 @@
         </section>
 
         <section id="trending">
-            <h3>Trending Songs</h3>
+            <h2>Trending Songs</h2>
             <section>
-                <h4>Aloma</h4>
+                <h3>Aloma</h3>
                 <p>Artist Cali</p>
                 <img src="images/aloma-cover.png" alt="Image of a white bird flying in a black background">
                 <audio controls src="audio/aloma.mp3"></audio>
             </section>
             <section>
-                <h4>My Road</h4>
+                <h3>My Road</h3>
                 <p>Artist Nesterouk</p>
                 
                 <img src="images/my-road-cover.png" alt="Image of a two lane highway in a desert heading towards a snowcapped mountain on a bright sunny day">
                <audio controls src="audio/my-road.mp3"></audio>
             </section>
             <section>
-                <h4>Papaya</h4>
+                <h3>Papaya</h3>
                 <p>Artist Dredstudio</p>
                 <img src="images/papaya-cover.png" alt="Image of an open papaya on a green background">
                 <audio controls src="audio/papaya.mp3"></audio>
             </section>
             <section>
-                <h4>Smoothies</h4>
+                <h3>Smoothies</h3>
                 <p>Artist Black Rhomb</p>
                 <img src="images/smoothies-cover.png" alt="Pink Smoothie surrounded with bananas, straberries, oranges, a pineaple on a white table with a pastel pink wall">
                 <audio controls src="audio/smoothies.mp3"></audio>
             </section>
             <section>
-                <h4>Successful Performance</h4>
+                <h3>Successful Performance</h3>
                 <p>Artist Ricky Bombino</p>
                 <img src="images/successful-performance-cover.png" alt="Man that looks like Chris Evans in a red sweater ready to fight with happiness in front of a light blue brick wall">
                 <audio controls src="audio/successful-performance.mp3"></audio>
@@ -61,64 +61,64 @@
        </section>
 
        <section id="yourPlaylists">
-            <h3>Your Playlists</h3>
+            <h2>Your Playlists</h2>
             <section>
                 <section>
                     <img src="images/best-of-2020-cover.png" alt="Fire lighting up 2020 in a dark space">
-                    Best of 2020
-                    The music that got you through the lock down.
+                    <h3>Best of 2020</h3>
+                    <p>The music that got you through the lock down.</p>
                 </section>
                 <section>
                     <img src="images/pumpkin-spice-cover.png" alt="coffee with a fern design made of cream on a wooded background">
-                    Pumpkin Spice
-                    Creamy and spicy, just like your favorite autumnal latte.
+                    <h3>Pumpkin Spice</h3>
+                    <p>Creamy and spicy, just like your favorite autumnal latte.</p>
                 </section>
                 <section>
                     <img src="images/quiet-storm-cover.png" alt="Blue and puirple stormy clouds with lighting">
-                    Quiet Storm
-                    Slow tempos and relaxed rhythms. 
+                    <h3>Quiet Storm</h3>
+                    <p>Slow tempos and relaxed rhythms.</p> 
                 </section>
                 <section>
                     <img src="images/smooth-jazz-cover.png" alt="Saxaphoneplayers witha spot light on the right">
-                    Smooth Jazz
-                    The pioneers of smooth jazz
+                    <h3>Smooth Jazz</h3>
+                    <p>The pioneers of smooth jazz</p>
                 </section>
                 <section>
                     <img src="images/smooth-study-cover.png" alt="Person in a yellow sweater at a desk working on their laptop">
-                    Smooth Study
-                    Background music to keep you going while you study. 
+                    <h3>Smooth Study</h3>
+                    <p>Background music to keep you going while you study.</p>
                 </section>
                 <a href="#">All your playlists</a>
             </section>     
         </section>
 
         <section id="curatedPlaylists">
-            <h3>Curated Playlists</h3>
+            <h2>Curated Playlists</h2>
             <section>
                 <section>
                     <img src="images/boozy-brunch-cover.png" alt="Multipe people clinking glasses in the morning">
-                    Boozy Brunch
-                    Light up the afternoon with these energetic hits. 
+                    <h3>Boozy Brunch</h3>
+                    <p>Light up the afternoon with these energetic hits. </p>
                 </section>
                 <section>
                     <img src="images/dinner-party-cover.png" alt="Dinner table with food, cups, lit candles">
-                    Dinner Party
-                    Background music to give your party life, but allow your guests to chat. 
+                    <h3>Dinner Party</h3>
+                    <p>Background music to give your party life, but allow your guests to chat.</p> 
                 </section>
                 <section>
                     <img src="images/mellow-cover.png" alt="Two people sitting on a park bench in the middle of the Fall season">
-                    Mellow
-                    Relax after a stressful day with this collection of extra smooth jazz.
+                    <h3>Mellow</h3>
+                    <p>Relax after a stressful day with this collection of extra smooth jazz.</p>
                 </section>
                 <section>
                     <img src="images/jazz-chill-cover.png" alt="Close up shot of red rose petals">
-                    Jazz and Chill
-                    Set the mood with these silky sounds.
+                    <h3>Jazz and Chill</h3>
+                    <p>Set the mood with these silky sounds.</p>
                 </section>
                 <section>
                     <img src="images/smooth-saxophone-cover.png" alt="Portriat of a man with glasses and grey in front of a light grey background">
-                    Jazz Saxophone
-                    The greatest collection of your sax favorites. 
+                    <h3>Jazz Saxophone</h3>
+                    <p>The greatest collection of your sax favorites.</p>
                 </section>
             </section>     
             <a href="#">More curated</a>    
