updated html and css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>MuzakMaker</title>
 </head>
 <body>
@@ -11,12 +12,15 @@
     </header>
     <main>
         <nav>
+            <h2>Main Navigation</h2>
+            <input type="checkbox" id="dropdown">
+            <label for="dropdown"><span></span></label>
             <ul>
                 <li><a href="index.html">MuzakMaker</a></li>
                 <li><a href="#">Trending Songs</a></li>
                 <li><a href="#">Your playlists</a></li>
                 <li><a href="#">Curated Playlists</a></li>
-                <li><a href="#"><img src="images/duke-silver.png" alt="image of Duke Silver"></a></li>
+                <li><a href="#"><img src="images/duke-silver.png" alt="User Profile"></a></li>
             </ul>
         </nav>
         <section id="smoothJazz">
