--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 </head>
 <body>
     <header>
-        <h1>MuzakMaker</h1>
-    </header>
-    <main>
         <nav>
             <h2>Main Navigation</h2>
             <input type="checkbox" id="dropdown">
@@ -23,39 +20,41 @@
                 <li><a href="#"><img src="images/duke-silver.png" alt="User Profile"></a></li>
             </ul>
         </nav>
-        <section id="smoothJazz">
-            <h2>Smooth Jazz</h2>
+    </header>
+    <main>
+        <section id="jazzStation">
+            <h1>Smooth Jazz</h1>
             <p>This station is dedicated to the soothing sounds of smooth jazz. This genre of commercially oriented crossover jazz became dominant in the 1980s and early 1990s.</p>
         </section>
 
         <section id="trending">
             <h2>Trending Songs</h2>
-            <section>
+            <section id="aloma">
                 <h3>Aloma</h3>
                 <p>Artist Cali</p>
                 <img src="images/aloma-cover.png" alt="Image of a white bird flying in a black background">
                 <audio controls src="audio/aloma.mp3"></audio>
             </section>
-            <section>
+            <section id="myRoad">
                 <h3>My Road</h3>
                 <p>Artist Nesterouk</p>
                 
                 <img src="images/my-road-cover.png" alt="Image of a two lane highway in a desert heading towards a snowcapped mountain on a bright sunny day">
                <audio controls src="audio/my-road.mp3"></audio>
             </section>
-            <section>
+            <section id="papaya">
                 <h3>Papaya</h3>
                 <p>Artist Dredstudio</p>
                 <img src="images/papaya-cover.png" alt="Image of an open papaya on a green background">
                 <audio controls src="audio/papaya.mp3"></audio>
             </section>
-            <section>
+            <section id="smoothies">
                 <h3>Smoothies</h3>
                 <p>Artist Black Rhomb</p>
                 <img src="images/smoothies-cover.png" alt="Pink Smoothie surrounded with bananas, straberries, oranges, a pineaple on a white table with a pastel pink wall">
                 <audio controls src="audio/smoothies.mp3"></audio>
             </section>
-            <section>
+            <section id="successfulPerformance">
                 <h3>Successful Performance</h3>
                 <p>Artist Ricky Bombino</p>
                 <img src="images/successful-performance-cover.png" alt="Man that looks like Chris Evans in a red sweater ready to fight with happiness in front of a light blue brick wall">
@@ -66,65 +65,65 @@
 
        <section id="yourPlaylists">
             <h2>Your Playlists</h2>
-            <section>
-                <section>
+            <div>
+                <section id="best2020">
                     <img src="images/best-of-2020-cover.png" alt="Fire lighting up 2020 in a dark space">
                     <h3>Best of 2020</h3>
                     <p>The music that got you through the lock down.</p>
                 </section>
-                <section>
+                <section id="pumpkinSpice">
                     <img src="images/pumpkin-spice-cover.png" alt="coffee with a fern design made of cream on a wooded background">
                     <h3>Pumpkin Spice</h3>
                     <p>Creamy and spicy, just like your favorite autumnal latte.</p>
                 </section>
-                <section>
+                <section id="quietStorm">
                     <img src="images/quiet-storm-cover.png" alt="Blue and puirple stormy clouds with lighting">
                     <h3>Quiet Storm</h3>
                     <p>Slow tempos and relaxed rhythms.</p> 
                 </section>
-                <section>
+                <section id="smoothJazz">
                     <img src="images/smooth-jazz-cover.png" alt="Saxaphoneplayers witha spot light on the right">
                     <h3>Smooth Jazz</h3>
                     <p>The pioneers of smooth jazz</p>
                 </section>
-                <section>
+                <section id="smoothStudy">
                     <img src="images/smooth-study-cover.png" alt="Person in a yellow sweater at a desk working on their laptop">
                     <h3>Smooth Study</h3>
                     <p>Background music to keep you going while you study.</p>
                 </section>
                 <a href="#">All your playlists</a>
-            </section>     
+            </div>     
         </section>
 
         <section id="curatedPlaylists">
             <h2>Curated Playlists</h2>
-            <section>
-                <section>
+            <div>
+                <section id="boozyBrunch">
                     <img src="images/boozy-brunch-cover.png" alt="Multipe people clinking glasses in the morning">
                     <h3>Boozy Brunch</h3>
                     <p>Light up the afternoon with these energetic hits. </p>
                 </section>
-                <section>
+                <section id="dinnerParty">
                     <img src="images/dinner-party-cover.png" alt="Dinner table with food, cups, lit candles">
                     <h3>Dinner Party</h3>
                     <p>Background music to give your party life, but allow your guests to chat.</p> 
                 </section>
-                <section>
+                <section id="mellow">
                     <img src="images/mellow-cover.png" alt="Two people sitting on a park bench in the middle of the Fall season">
                     <h3>Mellow</h3>
                     <p>Relax after a stressful day with this collection of extra smooth jazz.</p>
                 </section>
-                <section>
+                <section id="jazzChill">
                     <img src="images/jazz-chill-cover.png" alt="Close up shot of red rose petals">
                     <h3>Jazz and Chill</h3>
                     <p>Set the mood with these silky sounds.</p>
                 </section>
-                <section>
+                <section id="jazzSax">
                     <img src="images/smooth-saxophone-cover.png" alt="Portriat of a man with glasses and grey in front of a light grey background">
                     <h3>Jazz Saxophone</h3>
                     <p>The greatest collection of your sax favorites.</p>
                 </section>
-            </section>     
+            </div>     
             <a href="#">More curated</a>    
        </section>
     </main>
