html css update
added sections, and changed css

--- a/index.html
+++ b/index.html
@@ -66,74 +66,96 @@
             
        </section>
 
-       <section >
+       <section id="playlists">
+            <section >
             <h2>Your Playlists</h2>
             <div id="yourPlaylists">
                 <section id="best2020">
                     <img src="images/best-of-2020-cover.png" alt="Fire lighting up 2020 in a dark space">
-                    <h3>Best of 2020</h3>
-                    <p>The music that got you through the lock down.</p>
+                    <section>
+                        <h3>Best of 2020</h3>
+                        <p>The music that got you through the lock down.</p>
+                    </section>
                 </section>
                 <section id="pumpkinSpice">
                     <img src="images/pumpkin-spice-cover.png" alt="coffee with a fern design made of cream on a wooded background">
-                    <h3>Pumpkin Spice</h3>
-                    <p>Creamy and spicy, just like your favorite autumnal latte.</p>
+                    <section>
+                        <h3>Pumpkin Spice</h3>
+                        <p>Creamy and spicy, just like your favorite autumnal latte.</p>
+                    </section>
                 </section>
                 <section id="quietStorm">
                     <img src="images/quiet-storm-cover.png" alt="Blue and puirple stormy clouds with lighting">
-                    <h3>Quiet Storm</h3>
-                    <p>Slow tempos and relaxed rhythms.</p> 
+                    <section>
+                        <h3>Quiet Storm</h3>
+                        <p>Slow tempos and relaxed rhythms.</p>
+                    </section> 
                 </section>
                 <section id="smoothJazz">
                     <img src="images/smooth-jazz-cover.png" alt="Saxaphoneplayers witha spot light on the right">
-                    <h3>Smooth Jazz</h3>
-                    <p>The pioneers of smooth jazz</p>
+                    <section>
+                        <h3>Smooth Jazz</h3>
+                        <p>The pioneers of smooth jazz</p>
+                    </section>
                 </section>
                 <section id="smoothStudy">
                     <img src="images/smooth-study-cover.png" alt="Person in a yellow sweater at a desk working on their laptop">
-                    <h3>Smooth Study</h3>
-                    <p>Background music to keep you going while you study.</p>
+                    <section>
+                        <h3>Smooth Study</h3>
+                        <p>Background music to keep you going while you study.</p>
+                    </section>
                 </section>
             </div>  
             <div id="button">
                 <a href="#">All your playlists</a>
             </div>              
-        </section>
+            </section>
 
-        <section >
+            <section >
             <h2>Curated Playlists</h2>
             <div id="curatedPlaylists">
                 <section id="boozyBrunch">
                     <img src="images/boozy-brunch-cover.png" alt="Multipe people clinking glasses in the morning">
-                    <h3>Boozy Brunch</h3>
-                    <p>Light up the afternoon with these energetic hits. </p>
+                    <section>
+                        <h3>Boozy Brunch</h3>
+                        <p>Light up the afternoon with these energetic hits. </p>
+                    </section>
                 </section>
                 <section id="dinnerParty">
                     <img src="images/dinner-party-cover.png" alt="Dinner table with food, cups, lit candles">
-                    <h3>Dinner Party</h3>
-                    <p>Background music to give your party life, but allow your guests to chat.</p> 
+                    <section>
+                        <h3>Dinner Party</h3>
+                        <p>Background music to give your party life, but allow your guests to chat.</p>
+                    </section>
                 </section>
                 <section id="mellow">
                     <img src="images/mellow-cover.png" alt="Two people sitting on a park bench in the middle of the Fall season">
-                    <h3>Mellow</h3>
-                    <p>Relax after a stressful day with this collection of extra smooth jazz.</p>
+                    <section>
+                        <h3>Mellow</h3>
+                        <p>Relax after a stressful day with this collection of extra smooth jazz.</p>
+                    </section>
                 </section>
                 <section id="jazzChill">
                     <img src="images/jazz-chill-cover.png" alt="Close up shot of red rose petals">
-                    <h3>Jazz and Chill</h3>
-                    <p>Set the mood with these silky sounds.</p>
+                    <section>
+                        <h3>Jazz and Chill</h3>
+                        <p>Set the mood with these silky sounds.</p>
+                    </section>
                 </section>
                 <section id="jazzSax">
                     <img src="images/smooth-saxophone-cover.png" alt="Portriat of a man with glasses and grey in front of a light grey background">
-                    <h3>Jazz Saxophone</h3>
-                    <p>The greatest collection of your sax favorites.</p>
+                    <section>
+                        <h3>Jazz Saxophone</h3>
+                        <p>The greatest collection of your sax favorites.</p>
+                    </section>
                 </section>
             </div>  
             <div id="button">
                 <a href="#">More curated</a>    
             </div>   
             
-       </section>
+            </section>
+        </section>
     </main>
     <footer>
         <small>Copyright 2022 Smooth Jazz</small>
